--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,
+  "private": false,
   "name": "proxy-config-worker",
   "version": "1.0.0",
   "description": "A template for kick starting a Cloudflare Workers project",
@@ -14,5 +14,12 @@
   "license": "MIT",
   "devDependencies": {
     "prettier": "^1.18.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TBXark/proxy-config-worker"
+  },
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/@tbxark"
   }
 }
